$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-03-04 [B] Fixed search issue when private albums are present (thread 63940) {eenemeenemuu}
2010-03-04 [B] Fixed display of empty meta albums (thread ID 63939) {eenemeenemuu}
2010-03-03 [C] Set theme "curve" as default theme {GauGau}
2010-03-03 [M] Removed outdated core themes {GauGau}
2010-03-01 [D] Added language manager section to docs {GauGau}
2010-03-01 [A] Added Greek language file (user contribution) {eenemeenemuu}
2010-02-26 [B] Slideshow from lastcom of an album doesn't start at correct file (thread ID 63585) {timoswelt}
2010-02-25 [A] Populate thumbnail pages dropdown list using JavaScript (thread ID 63844) {eenemeenemuu}
2010-02-23 [A] Added plugin hook 'theme_thumbnails_album_types' {eenemeenemuu}
2010-02-22 [C] Increased height for logo section of coppermine theme {GauGau}
2010-02-19 [A] Added plugin hooks for thumbnail table manipulation {GauGau}
2010-02-18 [B] Added missing token checks to forms {GauGau}
2010-02-18 [A] Added icon display to preserve the same look all over the app {GauGau}
2010-02-14 [A] Use intermediate picture size as default video size (thread ID 63728) {eenemeenemuu}
2010-02-11 [A] Added plugin hook 'search_form' (thread ID 63693) {eenemeenemuu}
2010-02-11 [A] Added new parameter to functions 'starttable' and 'endtable': return or echo content {eenemeenemuu}
2010-02-10 [B] Fixed slideshow from lastcom of an album to start at correct file (threadID 63585) {Nibbler}
2010-02-10 [B] Fixed search results leading to wrong files (threadID 63583) {Nibbler}
2010-02-09 [C] Replaced ascending and descending GIFs by PNGs {Timo}